@@ -30,7 +30,7 @@
     
     # Here's another. If you have a Google Analytics ID, uncomment and edit 
     # the next line, and the analytics code will automatically be included
-	# in your generated HTML files:
+    # in your generated HTML files:
     #googleAnalyticsId = UA-12345678-1
     
 ############################################################################################
@@ -250,7 +250,7 @@
     #
 
     # List of files that are to be copied at the first invocation of the generator only
-    copy_once = backgrounds/*, weewx.css
+    copy_once = backgrounds/*, weewx.css, favicon.ico
     
     # List of files to be copied every time:
     # copy_always = 
